--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,6 @@
 
 #sidebar-wrapper {
   min-height: 100vh;
-  margin-left: -15rem;
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
@@ -31,6 +30,7 @@
   margin-left: 0;
 }
 
+//desktop
 @media (min-width: 768px) {
   #sidebar-wrapper {
     margin-left: 0;
@@ -44,6 +44,7 @@
   #wrapper.toggled #sidebar-wrapper {
     margin-left: -15rem;
   }
+
 }
 
 #sidebar li {
