--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
   crossorigin="anonymous"></script>
   </head>
   <body>
+    <nav class="navbar navbar-default">
+      <p class="navbar-text navbar-left"><a class="hamburgers" href="#">Menu</a></p>
+      <h1>Borf's Guide to ROM</h1>
+    </nav>
     <div class="d-flex" id="wrapper">
       <div class="bg-light border-right" id="sidebar-wrapper">
         <nav id="sidebar">
@@ -30,5 +34,11 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script>
+      $(".hamburgers").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+      });
+    </script>
   </body>
 </html>
