--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,7 @@
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
+  margin-left: 0rem;
 }
 
 #sidebar-wrapper .sidebar-heading {
@@ -22,12 +23,12 @@
 }
 
 
-#page-content-wrapper {
+#content {
   min-width: 100vw;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  margin-left: 0;
+  margin-left: 15rem;
 }
 
 //desktop
@@ -36,7 +37,7 @@
     margin-left: 0;
   }
 
-  #page-content-wrapper {
+  #content {
     min-width: 0;
     width: 100%;
   }
@@ -351,3 +352,12 @@ table tr td
     
 }
 
+.hamburgers {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30'><path stroke='rgba(92,46,78, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/></svg>");
+    line-height: 0; 
+    font-size: 0;
+    color: transparent; 
+}
