Added logo, worked some feedback into 1F

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-default">
       <p class="navbar-text navbar-left"><a class="hamburgers" href="#">Menu</a></p>
-      <h1>Borf's Guide to ROM</h1>
+      <h1>Borf's Guide to ROM<img class="logo" src="{{baseurl}}/assets/images/logo.gif"></h1>
     </nav>
     <div class="d-flex" id="wrapper">
       <div class="bg-light border-right" id="sidebar-wrapper">
