--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,27 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
     <title>Luminarious ROM guides</title>
     <style>
+      body, p, li
+      {
+        color: #dfdfdf;
+      }
       #content
       {
         margin: 20px;
         margin-top: 100px;
+      }
+      .note
+      {
+        font-size: small;
+      }
+
+      td{
+        vertical-align: top;
       }
 
       nav
@@ -24,16 +37,13 @@
         background: linear-gradient(0deg, rgba(241,93,47,1) 0%, rgba(241,153,35,1) 100%);
         
       }
-      nav .dropdown-toggle
-      {
-
-      }
+      
       nav .dropdown-menu
       {
         background-color: rgb(33, 37, 41);
 
       }
-      nav a:visited
+      a:visited
       {
         color: white;
       }
@@ -162,11 +172,22 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script>
+  $(function()
+  {
+    $('a[href*="romcodex"]').each(function(el)
+    {
+      var href = this.href;
+      if(href.includes("item"))
+      {
+        var itemid = parseInt(href.substr(href.indexOf("item/")+5));
+        var img = $('<img src="https://borf.github.io/romicons/Items/'+itemid+'.png" height="20">');
+        img.insertBefore($(this));
+      }
+    });
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+  });
+</script>
+
   </body>
 </html>
