Updated weekly nav. updated weekly header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,9 +43,9 @@
         background-color: rgb(33, 37, 41);
 
       }
-      a:visited
+      a, a:visited
       {
-        color: white;
+        color: white !important;
       }
       nav .dropdown-menu a
       {
@@ -83,17 +83,17 @@
                 Weeklies
               </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Purgatory</a></li>
-                <li><a class="dropdown-item" href="#">Oracle</a></li>
-                <li><a class="dropdown-item" href="#">Valkyrie Ruins</a></li>
-                <li><a class="dropdown-item" href="#">Endless Tower</a></li>
-                <li><a class="dropdown-item" href="#">Battle of Cake</a></li>
-                <li><a class="dropdown-item" href="#">Thanatos Tower</a></li>
-                  <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>F1</a></li>
-                  <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>F2</a></li>
-                  <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>F3</a></li>
-                  <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>F4</a></li>
-                <li><a class="dropdown-item" href="#">Echoing Corridor</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/purg">Purgatory</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/oracle">Oracle</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/vr">Valkyrie Ruins</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/et">Endless Tower</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/boc">Battle of Cake</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/tt">Thanatos Tower</a></li>
+                  <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/tt/1f"><i class="bi bi-chevron-right"></i>F1</a></li>
+                  <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/tt/2f"><i class="bi bi-chevron-right"></i>F2</a></li>
+                  <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/tt/3f"><i class="bi bi-chevron-right"></i>F3</a></li>
+                  <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/tt/4f"><i class="bi bi-chevron-right"></i>F4</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/weekly/ec">Echoing Corridor</a></li>
               </ul>
             </li>
 
