Fixed mobile layout, added new player info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,9 +62,9 @@
   <body class="bg-dark text-white">
     <nav class="navbar fixed-top navbar-expand-lg text-black">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{{site.baseurl}}">
+        <a class="collapse navbar-collapse navbar-brand" href="{{site.baseurl}}">
           <img class="logo" style="height: 60px; width: auto; margin-top: -14px; margin-bottom: -13px; margin-left: -12px; margin-right: 12px;" src="{{site.baseurl}}/assets/images/lumi.gif">Luminary's ROM guides</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -145,22 +145,30 @@
                 General Tips
               </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Building your character</a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Aesir Monument</a></li>
+                <li><a class="dropdown-item" href="tips/newplayer">Starting as a new player</a></li>
+                <li><a class="dropdown-item" href="tips/strengthening">How to get stronger</a></li>
+                <li><a class="dropdown-item" href="tips/refining"><i class="bi bi-chevron-right"></i>Refining</a></li>
+                <li><a class="dropdown-item" href="tips/enhancing"><i class="bi bi-chevron-right"></i>Enhancing</a></li>
+                <li><a class="dropdown-item" href="tips/enchanting"><i class="bi bi-chevron-right"></i>Enchanting</a></li>
+                <li><a class="dropdown-item" href="tips/aeisr"><i class="bi bi-chevron-right"></i>Aesir Monument</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Refine Enchanting</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Guild Praying Cards</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Guild Blessings</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Adventure Book</a></li>
                 <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Runes</a></li>
                 <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Relics</a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Guild</a></li>
                 <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Oracle Mirror</a></li>
-                <li><a class="dropdown-item" href="#">Refining</a></li>
-                <li><a class="dropdown-item" href="#">PVP 6v6</a></li>
-                <li><a class="dropdown-item" href="#">PVP 12v12</a></li>
-                <li><a class="dropdown-item" href="#">Other stuff</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Cooking</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Housing</a></li>
+                <li><a class="dropdown-item" href="#">PVP</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>PVP 6v6</a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>PVP 12v12</a></li>
               </ul>
             </li>
 
           </ul>
         </div>
-        <img class="logo" style="height: 40px; width: auto;" src="{{site.baseurl}}/assets/images/logo.gif">
+        <img class="logo collapse navbar-collapse" height="40" width="42" style="height: 40px; width: 42px !important; flex-grow: 0" src="{{site.baseurl}}/assets/images/logo.gif">
       </div>
     </nav>
 
