Fixed relative links in nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,12 +145,12 @@
                 General Tips
               </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="tips/newplayer">Starting as a new player</a></li>
-                <li><a class="dropdown-item" href="tips/strengthening">How to get stronger</a></li>
-                <li><a class="dropdown-item" href="tips/refining"><i class="bi bi-chevron-right"></i>Refining</a></li>
-                <li><a class="dropdown-item" href="tips/enhancing"><i class="bi bi-chevron-right"></i>Enhancing</a></li>
-                <li><a class="dropdown-item" href="tips/enchanting"><i class="bi bi-chevron-right"></i>Enchanting</a></li>
-                <li><a class="dropdown-item" href="tips/aeisr"><i class="bi bi-chevron-right"></i>Aesir Monument</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/tips/newplayer">Starting as a new player</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/tips/strengthening">How to get stronger</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/tips/refining"><i class="bi bi-chevron-right"></i>Refining</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/tips/enhancing"><i class="bi bi-chevron-right"></i>Enhancing</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/tips/enchanting"><i class="bi bi-chevron-right"></i>Enchanting</a></li>
+                <li><a class="dropdown-item" href="{{site.baseurl}}/tips/aeisr"><i class="bi bi-chevron-right"></i>Aesir Monument</a></li>
                 <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Refine Enchanting</a></li>
                 <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Guild Praying Cards</a></li>
                 <li><a class="dropdown-item" href="#"><i class="bi bi-chevron-right"></i>Guild Blessings</a></li>
