Some mobile fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,10 +57,15 @@
         background: rgb(241,93,47);    background: linear-gradient(0deg, rgba(241,93,47,1) 0%, rgba(241,153,35,1) 100%);
         color: white;
       }
+      .headerimg
+      {
+        width: 100%; 
+        height: auto;
+      }
     </style>
   </head>
   <body class="bg-dark text-white">
-    <nav class="navbar fixed-top navbar-expand-lg text-black">
+    <nav class="navbar navbar-expand-lg text-black">
       <div class="container-fluid">
         <a class="collapse navbar-collapse navbar-brand" href="{{site.baseurl}}">
           <img class="logo" style="height: 60px; width: auto; margin-top: -14px; margin-bottom: -13px; margin-left: -12px; margin-right: 12px;" src="{{site.baseurl}}/assets/images/lumi.gif">Luminary's ROM guides</a>
